Refactor: 카테고리 트리 조회 수정 카테고리 트리 조회 트리 조합 로직 서비스로 이전 Resolves: #386